# GLR

./: .gitignore  CMakeLists.txt  LRParser.cpp  LRParser.h  glr_processor.h  glr_tables.cpp  glr_tables.h  glr_ut.cpp  grammar.cpp  grammar.h  graph_structured_stack.h  grl.cpp  grl.h  lrparser_ut.cpp  main.cpp
atn/: CMakeLists.txt  atn.cpp  atn.h  converter_to_grammar.h
glr/: CMakeLists.txt  glr.cpp  glr.h  glr_processor.cpp  glr_processor.h  glr_tables.cpp  glr_tables.h  grammar.h
glr/ut/: glr_ut.cpp  utils.h
lexer/: CMakeLists.txt  lexer.h
lr_table_builder/: CMakeLists.txt  main.cpp
morphology/: CMakeLists.txt  morphology.h
